WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
303451
[Site Isolation] Cannot scroll on multiple sites (facebook.com, reddit.com, google.com)
https://bugs.webkit.org/show_bug.cgi?id=303451
Summary
[Site Isolation] Cannot scroll on multiple sites (facebook.com, reddit.com, g...
Anthony Tarbinian
Reported
2025-12-02 21:56:26 PST
With Site Isolation on, multiple sites fail to scroll. Broken as of
303299@main
.
Attachments
Add attachment
proposed patch, testcase, etc.
Anthony Tarbinian
Comment 1
2025-12-02 21:56:28 PST
<
rdar://problem/165248055
>
Anthony Tarbinian
Comment 2
2025-12-02 21:59:12 PST
Pull request:
https://github.com/WebKit/WebKit/pull/54751
EWS
Comment 3
2025-12-03 16:20:50 PST
Committed
303872@main
(e747ec44b2a5): <
https://commits.webkit.org/303872@main
> Reviewed commits have been landed. Closing PR #54751 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug