Source/WebKit/Shared/ProvisionalFrameCreationParameters.h
@@ -38,11 +38,6 @@ using SandboxFlags = OptionSet<SandboxFlag>;
 
 namespace WebKit {
 
-enum class CommitTiming : bool {
-    WaitForLoad,
-    Immediately,
-};
-
 struct ProvisionalFrameCreationParameters {
     WebCore::FrameIdentifier frameID;
     std::optional<WebCore::FrameIdentifier> frameIDBeforeProvisionalNavigation;
@@ -51,7 +46,6 @@ struct ProvisionalFrameCreationParameters {
     WebCore::ReferrerPolicy effectiveReferrerPolicy { WebCore::ReferrerPolicy::EmptyString };
     WebCore::ScrollbarMode scrollingMode;
     std::optional<WebCore::IntSize> initialSize;
-    CommitTiming commitTiming { CommitTiming::WaitForLoad };
 };
 
 } // namespace WebKit
